--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gemini 转录 SRT - Vue3</title>
+    <meta name="description" content="蛋蛋字幕识别 - 利用谷歌 Gemini 进行音视频转录为SRT字幕文件，支持多种格式，多种语言，高精度识别" />
+    <meta name="keywords" content="字幕识别,音频转录,视频转录,SRT字幕,AI识别,蛋蛋字幕" />
+    <title>蛋蛋字幕识别 - 智能音视频转录工具</title>
   </head>
   <body class="bg-gray-50 text-gray-900">
     <div id="app"></div>
